--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
     - name: establish SSH connection
       run: |
         eval $(ssh-agent -s)
-        ssh-add <(echo "$SSH_PRIVATE_KEY")
+        ssh-add <(echo "${{ secrets.SSH_PRIVATE_KEY }}")
     - name: deploy my html
       run: scp -o StrictHostKeyChecking=no \
                -o UserKnownHostsFile=/dev/null \
