--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: my_test_CI
 env:
-  IP_ADDR: "3.125.40.249"
+  IP_ADDR: "18.194.119.138"
   SSH_USER: "ubuntu"
   
 on:
@@ -24,7 +24,8 @@ jobs:
         ssh-add <(echo "${{ secrets.SSH_SECRET_KEY }}")
         ssh-add -l
     - name: deploy my html
-      run: scp -o StrictHostKeyChecking=no \
-               -o UserKnownHostsFile=/dev/null \
-               -r ./* ${{ env.SSH_USER }}@${{ env.IP_ADDR}}:/home/ubuntu/
+      run: ssh ${{ env.SSH_USER }}@${{ env.IP_ADDR }} "hostname && echo 'Welcome!!!' > welcome.txt"
+#      run: scp -o StrictHostKeyChecking=no \
+#               -o UserKnownHostsFile=/dev/null \
+#               -r ./* ${{ env.SSH_USER }}@${{ env.IP_ADDR}}:/home/ubuntu/
                
