--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,8 @@ jobs:
       run: |
         mkdir -p ~/.ssh
         chmod 700 ~/.ssh
-        echo "${{ secrets.SSH_SECRET_KEY }}" > ~/.ssh/id_rsa
+        echo "${{ secrets.SSH_SECRET_KEY }}" > ~/.ssh/id_rsa && chmod 400 ~/.ssh/id_rsa
         ls -l ~/.ssh/id_rsa
-        cat ~/.ssh/id_rsa
     - name: test ssh connection
       run: ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -vT ${{ env.SSH_USER }}@${{ env.IP_ADDR }}
 #    - name: deploy my html
