--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,12 +22,12 @@ jobs:
       run: |
         mkdir -p ~/.ssh && chmod 700 ~/.ssh
         echo "${{ secrets.SSH_SECRET_KEY }}" > ~/.ssh/id_rsa && chmod 400 ~/.ssh/id_rsa
-#    - name: test ssh connection
-#      run: ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -vT ${{ env.SSH_USER }}@${{ env.IP_ADDR }}
-    - name: deploy my html
+    - name: test ssh connection
+      run: ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -vT ${{ env.SSH_USER }}@${{ env.IP_ADDR }}
+#    - name: deploy my html
       #run: ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${{ env.SSH_USER }}@${{ env.IP_ADDR }} "hostname && echo 'Welcome!!!' > welcome.txt"
-      run: |
-        scp -o StrictHostKeyChecking=no \
-            -o UserKnownHostsFile=/dev/null \
-            -r ./* ${{ env.SSH_USER }}@${{ env.IP_ADDR }}:/var/www/html/
+#      run: |
+#        scp -o StrictHostKeyChecking=no \
+#            -o UserKnownHostsFile=/dev/null \
+#            -r ./* ${{ env.SSH_USER }}@${{ env.IP_ADDR }}:/var/www/html/
             
