--- a/.github/workflows/eb-rds-test.yml
+++ b/.github/workflows/eb-rds-test.yml
@@ -24,3 +24,13 @@ jobs:
         cd ..
     - name: view results
       run: ls -l
+    - name: Install Python 3.8
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.8
+    - name: Install EB CLI using pip
+      run: |
+        python -m pip install --upgrade pip
+        pip install awsebcli --upgrade
+        aws --version
+        eb --version
