--- a/.github/workflows/eb-rds.yml
+++ b/.github/workflows/eb-rds.yml
@@ -64,4 +64,4 @@ jobs:
         --region ${{ env.REGION }}
 
     - name: deploy inited EB Application Version
-      run: eb deploy ${{ env.APP_NAME }}-env --version ${{ env.APP_NAME }}-${{ github.sha }}
+      run: eb deploy ${{ env.APP_NAME }} --version ${{ env.APP_NAME }}-${{ github.sha }}
