--- a/.github/workflows/eb-rds-v1.yml
+++ b/.github/workflows/eb-rds-v1.yml
@@ -1,7 +1,7 @@
-name: Deploy-Pyapp-to-EB-with-RDS
+name: Deploy-Pyapp-to-EB-with-RDS-ver2
 env:
   REGION: "eu-central-1"
-  ZIP_PACK: "pyapp.zip"
+  ZIP_PACK: "pyapp-${{ github.sha }}.zip"
   S3_BUCKET: "anpod07-rds"
   APP_NAME: "test-rds-pyapp"
   AWS_PLATFORM: "Python"
@@ -15,28 +15,31 @@ jobs:
   my_build:
     runs-on: ubuntu-latest
     steps:
+
     - name: copy my html on Runner
       uses: actions/checkout@v3
-    - name: zip package
+
+    - name: create ZIP-package
       run: |
         cd pyapp/
         zip -r ${{ env.ZIP_PACK }} ./
         mv ./${{ env.ZIP_PACK }} ..
         cd ..
-    - name: view results
-      run: ls -l
-    - name: Install Python 3.9
+        ls -l
+
+    - name: install Python 3.9
       uses: actions/setup-python@v4
       with:
         python-version: 3.9
-    - name: Install EB CLI using pip
+
+    - name: install EB CLI using pip
       run: |
         python -m pip install --upgrade pip
         pip install awsebcli --upgrade
         aws --version
         eb --version
 
-    - name: AWS Creds
+    - name: init AWS Creds
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
@@ -55,13 +58,8 @@ jobs:
         --source-bundle S3Bucket="${{ env.S3_BUCKET }}",S3Key="${{ env.ZIP_PACK }}" \
         --auto-create-application
 
-    - name: init new EB Application Version
+    - name: deploy updated EB Application Version
       run: |
-        eb init \
-        -i ${{ env.APP_NAME }}-env \
-        -p ${{ env.AWS_PLATFORM }} \
-        -k ${{ secrets.AWS_ID }} \
-        --region ${{ env.REGION }}
-
-    - name: deploy inited EB Application Version
-      run: eb deploy ${{ env.APP_NAME }}-env --version ${{ env.APP_NAME }}-${{ github.sha }}
+        aws elasticbeanstalk update-environment \
+        --environment-name ${{ env.APP_NAME }}-env \
+        --version-label ${{ env.APP_NAME }}-${{ github.sha }}
