--- a/.github/workflows/eb-rds-v2.yml
+++ b/.github/workflows/eb-rds-v2.yml
@@ -1,4 +1,4 @@
-name: Deploy-Pyapp-to-EB-with-RDS-ver1
+name: Deploy-Pyapp-to-EB-with-RDS-ver2
 env:
   REGION: "eu-central-1"
   ZIP_PACK: "pyapp-${{ github.sha }}.zip"
@@ -58,8 +58,15 @@ jobs:
         --source-bundle S3Bucket="${{ env.S3_BUCKET }}",S3Key="${{ env.ZIP_PACK }}" \
         --auto-create-application
 
-    - name: deploy updated EB Application Version
+    - name: init new EB Application Version
       run: |
-        aws elasticbeanstalk update-environment \
-        --environment-name ${{ env.APP_NAME }}-env \
-        --version-label ${{ env.APP_NAME }}-${{ github.sha }}
+        eb init \
+        -i ${{ env.APP_NAME }} \
+        -p ${{ env.AWS_PLATFORM }} \
+        -k ${{ secrets.AWS_ID }} \
+        --region ${{ env.REGION }}
+
+    - name: deploy inited EB Environment
+      run: |
+        eb deploy ${{ env.APP_NAME }}-env \
+        --version ${{ env.APP_NAME }}-${{ github.sha }}
