--- a/pyapp/.ebextensions/01_pyapp.config
+++ b/pyapp/.ebextensions/01_pyapp.config
@@ -1,5 +1,10 @@
+packages: 
+  yum:
+    python3-devel: []
+    mariadb-devel: []
+
 option_settings:
   aws:elasticbeanstalk:application:environment:
     PYTHONPATH: "/var/app/current:$PYTHONPATH"
   aws:elasticbeanstalk:container:python:
-    WSGIPath: "pyapp:app"
+    WSGIPath: "wsgi:app"
