--- a/pyapp/.ebextensions/01_pyapp.config
+++ b/pyapp/.ebextensions/01_pyapp.config
@@ -1,10 +1,5 @@
-packages: 
-  yum:
-    python3-devel: []
-    mariadb-devel: []
-
 option_settings:
   aws:elasticbeanstalk:application:environment:
     PYTHONPATH: "/var/app/current:$PYTHONPATH"
   aws:elasticbeanstalk:container:python:
-    WSGIPath: "wsgi:app"
+    WSGIPath: "pyapp:app"
